--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: BY Blog
+title: Howie's Blog
 SEOTitle: Howie的博客 | BY Blog
 header-img: img/post-bg-desk.jpg
 email: swithaoy@gmail.com
